--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==0.89.0
-streamlit-webrtc==0.30.0
-av==8.0.3
-opencv-python-headless==4.6.0.46
-deepface==0.0.68
+streamlit
+streamlit-webrtc
+av
+opencv-python-headless
+deepface
